<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vineyard</string>
    <string name="place_picker_name">Place Picker</string>
    <string name="settings_name">Settings</string>
    <string name="title_section_main">Main</string>
    <string name="title_section_issues">Issue Tracker</string>
    <string name="title_section_tasks">Tasks</string>
    <string name="title_section_settings">Settings</string>
    <string name="title_report_issue">Report Issue</string>
    <string name="title_place_picker">Place Picker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_report_issue">Report</string>
    <string name="action_settings_restore">Restore default</string>
    <string name="action_add_photo">Add photo</string>
    <string name="action_delete_selected_photos">Delete selected photos</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_send">Send</string>
    <string name="action_up">Up</string>
    <string name="issue_title_error">Title is mandatory</string>
    <string name="issue_title_label">Title: </string>
    <string name="issue_title_hint">Issue title</string>
    <string name="issue_description_label">Description: </string>
    <string name="issue_description_hint">Issue details</string>
    <string name="issue_photos_label">Photos</string>
    <string name="issue_place_label">Place</string>
    <string name="issue_place_button">Select place</string>
    <string name="issue_priority_label">Priority: </string>
    <string name="issue_assigned_worker_label">Worker: </string>
    <string name="issues_label">Issues: </string>
    <string name="tasks_label">Tasks: </string>
    <string name="attributes_label">Attributes:</string>
    <string name="children_label">Children: </string>
    <string name="dialog_confirm_exit">Are you sure you want to exit?</string>
    <string name="dialog_confirm_exit_confirm">Yes</string>
    <string name="dialog_confirm_exit_cancel">No</string>
    <string name="status_new">New</string>
    <string name="status_assigned">Assigned</string>
    <string name="status_done">Done</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="place_view_photo">Place photo</string>
    <string name="preference_settings_restored">Settings has been restored</string>
    <string name="preference_settings_restore_title">Are you sure you want to restore default settings?</string>
    <string name="preference_settings_restore_confirm">Yes</string>
    <string name="preference_settings_restore_cancel">No</string>
    <string name="preference_server_settings">Server settings</string>
    <string name="preference_server_url">server_url</string>
    <string name="preference_server_url_label">Server URL</string>
    <string name="preference_server_url_default">http://vineyard-server.no-ip.org/</string>
    <string name="preference_server_url_error">Invalid server URL</string>
    <string name="preference_server_port">server_port</string>
    <string name="preference_server_port_label">Server port:</string>
    <string name="preference_server_port_default">80</string>
    <string name="preference_server_port_error">Server port must be in the range [1, 65535]</string>

    <string-array name="priorities">
        <item>--</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

</resources>