<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.formichelli.vit.VineyardMainActivity" >

    <item
        android:id="@+id/action_place_picker_up"
        android:title="@string/action_up"
        android:icon="@drawable/action_up"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/place_picker_action_cancel"
        android:icon="@drawable/action_cancel"
        android:title="@string/action_cancel"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/place_picker_action_done"
        android:icon="@drawable/action_done"
        android:title="@string/action_done"
        app:showAsAction="ifRoom"/>

</menu>