<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.formichelli.vineyard.MainFragment$PlaceholderFragment" >

    <TextView
        android:id="@+id/issue_view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/issue_view_priority"
        style="@style/PlaceViewButton"
        android:layout_below="@id/issue_view_description" >

        <TextView
            android:id="@+id/issue_view_priority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/issue_priority_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/issue_view_priority_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Low"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/issue_view_assigned_worker"
        style="@style/PlaceViewButton"
        android:layout_below="@id/issue_view_priority" >

        <TextView
            android:id="@+id/issue_view_assigned_worker_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/issue_assigned_worker_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/issue_view_assignee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Gigi"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
    
    <HorizontalScrollView
        android:id="@+id/issue_view_gallery_container"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/gallery_height"
        android:layout_below="@+id/issue_view_assigned_worker"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/wine_light" >

        <LinearLayout
            android:id="@+id/issue_view_gallery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp" />
    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/issue_view_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_view_gallery_container"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/action_delete"
        android:src="@drawable/action_delete_dark" />
    
    <ImageButton
        android:id="@+id/issue_view_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_view_gallery_container"
        android:layout_toLeftOf="@id/issue_view_delete"
        android:contentDescription="@string/action_delete"
        android:src="@drawable/action_edit_dark" />

</RelativeLayout>